err/pyflu.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyflu'...
Compiling './lib/python3.5/site-packages/pyflu/command.py'...
***   File "./lib/python3.5/site-packages/pyflu/command.py", line 48
    print line
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pyflu/daemon.py'...
***   File "./lib/python3.5/site-packages/pyflu/daemon.py", line 38
    except OSError, e:
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyflu/getopt_app.py'...
***   File "./lib/python3.5/site-packages/pyflu/getopt_app.py", line 98
    except GetoptError, e:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyflu/meta'...
Compiling './lib/python3.5/site-packages/pyflu/phony.py'...
***   File "./lib/python3.5/site-packages/pyflu/phony.py", line 46
    print "%s(%s) => %s" % (colorize(f.__name__, "green"),
                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyflu/qt'...
Listing './lib/python3.5/site-packages/pyflu/qt/base'...
Listing './lib/python3.5/site-packages/pyflu/qt/bug_report'...
Listing './lib/python3.5/site-packages/pyflu/qt/models'...
Compiling './lib/python3.5/site-packages/pyflu/qt/models/treemodel.py'...
***   File "./lib/python3.5/site-packages/pyflu/qt/models/treemodel.py", line 76
    except RenameError, e:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyflu/qt/views'...
Compiling './lib/python3.5/site-packages/pyflu/qt/views/treenode_view.py'...
***   File "./lib/python3.5/site-packages/pyflu/qt/views/treenode_view.py", line 64
    except RenameError, e:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyflu/qt/widgets'...
Listing './lib/python3.5/site-packages/pyflu/setuptools'...
Compiling './lib/python3.5/site-packages/pyflu/setuptools/cython.py'...
***   File "./lib/python3.5/site-packages/pyflu/setuptools/cython.py", line 45
    print cmd
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pyflu/setuptools/nsis.py'...
***   File "./lib/python3.5/site-packages/pyflu/setuptools/nsis.py", line 48
    print os.path.basename(input), output
           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyflu/setuptools/qt.py'...
***   File "./lib/python3.5/site-packages/pyflu/setuptools/qt.py", line 82
    print cmd
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pyflu/setuptools/update.py'...
***   File "./lib/python3.5/site-packages/pyflu/setuptools/update.py", line 83
    print "creating patch %s > %s" % (self.from_version, self.to_version)
                                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyflu/setuptools/versioning.py'...
***   File "./lib/python3.5/site-packages/pyflu/setuptools/versioning.py", line 93
    print "retrieving code from %s..." % self.src_url
                                     ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pyflu/tests'...
Listing './lib/python3.5/site-packages/pyflu/tests/test_update'...
Compiling './lib/python3.5/site-packages/pyflu/tests/test_update/__init__.py'...
***   File "./lib/python3.5/site-packages/pyflu/tests/test_update/__init__.py", line 82
    except InvalidOriginalFile, e:
                              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyflu/update'...
Compiling './lib/python3.5/site-packages/pyflu/update/__init__.py'...
***   File "./lib/python3.5/site-packages/pyflu/update/__init__.py", line 342
    print "usage: %s [diff|patch] [dest] [orig] [new]" % sys.argv[0]
                                                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pyflu/update/qt.py'...
***   File "./lib/python3.5/site-packages/pyflu/update/qt.py", line 204
    except IOError, err:
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyflu-0.9.7.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
